# FUTURE_DS_01

./: .gitignore  README.md  analysis.ipynb  main.py  pyproject.toml  temp.ipynb
dashboard/: FUTURE_DS_01.pbix
dashboards/: FUTURE_DS_01.pbix
notebooks/: analysis.ipynb
